--- a/personal-finance-tracker/client/src/styles/Income.css
+++ b/personal-finance-tracker/client/src/styles/Income.css
@@ -7,11 +7,12 @@
 }
 
 .income-content-wrapper.sidebar-closed {
-  margin-left: 80px; /* Width of closed sidebar */
+  margin-left: 80px;
 }
 
 .income-container {
-  padding: 2rem;
+  padding-top: 1rem;
+  padding-left: 1.5rem;
   width: 100%;
   display: flex;
   flex-direction: column;
